# ynab-unlinked

./: CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: changelog.yml  create-release.yml  pr-checks.yml  pypi-release.yml  release.yaml  release.yml
changelog/: +0724f668.added.md  +179d7f28.improved.md  +28614eb7.added.md  +7ed942be.added.md  +84dc8620.bugfix.md  +861d37fa.bugfix.md  +970fcb24.bugfix.md  +acbb0ceb.bugfix.md  +b6bbb033.improved.md  +bd93a90f.improved.md  +da3cd97e.added.md  +e13581ae.contrib.md  +eb933c16.bugfix.md  +ef0a8004.improved.md  1.added.md  1.improved.md  10.bugfix.md  11.bugfix.md  14.added.md  18.added.md  20.bugfix.md  26.bumped.md  29.bumped.md  30.bumped.md  31.bumped.md  32.bumped.md  35.bumped.md  36.bumped.md  37.bumped.md  38.bumped.md  39.bumped.md  4.added.md  40.bumped.md  41.bumped.md  42.bumped.md  43.bumped.md  46.bumped.md  47.bumped.md  48.bumped.md  49.bumped.md  (+18 more)
src/ynab_unlinked/: __about__.py  __init__.py  __main__.py  client.py  config.py  context_object.py  display.py  load.py  main.py  matcher.py  models.py  parser.py  parsers.py  payee.py  process.py  utils.py
src/ynab_unlinked/commands/: config.py  load.py  reconcile.py
src/ynab_unlinked/commands/apps/: reconcile.py
src/ynab_unlinked/config/: __init__.py  config_migrations.py  core.py  migrations.py  types.py  v1.py  v2.py
src/ynab_unlinked/config/models/: v1.py  v2.py
src/ynab_unlinked/entities/: __init__.py  _protocol.py
src/ynab_unlinked/entities/bbva/: bbva.py  command.py
src/ynab_unlinked/entities/cobee/: __init__.py  cobee.py  command.py
src/ynab_unlinked/entities/sabadell/: __init__.py  command.py  main.py  sabadell.py
src/ynab_unlinked/parsers/: __init__.py  _protocol.py  sabadell.py
src/ynab_unlinked/ynab_api/: client.py
tests/: conftest.py
tests/assets/bbva/: bbva.xlsx
tests/assets/config_V1/: config.json
tests/assets/config_V2/: config.json
tests/commands/: test_load.py
tests/config/: conftest.py  test_config_logic.py  test_config_migrations.py  test_config_version.py  test_migrations.py
tests/helpers/: load_entitie.py
tests/utils/: test_quoted_split.py
